# cpp_projects

./: .gitignore  CMakeLists.txt  README.md  main.c
Game/: Bullet.cpp  Enemy.cpp  Game.cpp  Game.h  Health.cpp  Health.h  MyRect.cpp  MyRect.h  Plane.pro  Player.cpp  Player.h  Score.cpp  practice4.pro  res.qrc  res_file.qrc
Game-Build/: Makefile  moc_bullet.cpp  practice4
PlaneGame/: .gitignore  CMakeLists.txt
PlaneGame/Source/include/: Game.h  Score.h
PlaneGame/Source/source/: Player.cpp
PlaneGame/Sources/: Bullet.cpp  Enemy.cpp  Game.cpp  Health.cpp  Player.cpp  Score.cpp  main.cpp
PlaneGame/Sources/Headers/: Bullet.h
PlaneGame/headers/: Bullet.h
PlaneGame/project/: PlaneGame  PlaneGameQrc  PlaneGameUser
PlaneGame/sources/: Bullet.cpp  Enemy.cpp  Game.cpp  Health.cpp  Player.cpp  Score.cpp  main.cpp
PlaneGame/src/Headers/: Game.h
PlaneGame/src/Source/: Bullet.cpp  Button.cpp  Enemy.cpp  Game.cpp  Health.cpp  Player.cpp  Score.cpp  main.cpp
Source/include/: Button.h  Health.h  Player.h
include/: Button.h  Enemy.h  Game.h  Health.h  Player.h  Score.h  test.h
practice4/: bullet.cpp  bullet.h  main.cpp
source/: Bullet.cpp  main.cpp
src/: Bullet.cpp  Button.cpp  Enemy.cpp  Game.cpp  Health.cpp  Player.cpp  Score.cpp  main.cpp
